2008-03-24  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-source-path-parser.lisp 

	The source parser READs in files, and if such a file contains some
	nasty #. hackery that results in an error being signalled, M-. would
	fail on anything that's defined in those files. Fix that by using
	a special #. reader function that invokes the original #. reader 
	with an IGNORE-ERRORS wrapped around.

	(make-sharpdot-reader): New function.
	(make-source-recording-readtable): Use it and install it on #.

	* slime.el (find-definition.2): New test case to guard against it.

2008-03-18  Geo Carncross <geocar@gmail.com>

	* swank-ecl.lisp: ECL moved gray streams into GRAY package.

2008-03-18  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-xref-group): Hanlde :zip files.

2008-03-17  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-source-path-parser.lisp:

	Multibyte characters in files could screw up compiler-notes
	highlighting on SBCL. Fix that.

	(skip-toplevel-forms): Abstracted out from READ-SOURCE-FORM.
	(source-path-file-position): Don't operate on the file stream
	directly, since CL:FILE-POSITION may not return character but
	binary offsets on such streams; instead slurp file content into a
	buffer string, and operate on that.
	
2008-03-16  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank.lisp (load-file-set-package): Removed; the function was
	only used in `slime-load-file-set-package' which invokes
	`slime-repl-set-package' which set the package for a second time.

	* slime.lisp (slime-load-file-set-package): Don't call
	SWANK:LOAD-FILE-SET-PACKAGE, but merely call SWANK:LOAD-FILE,
	then invoke `slime-repl-set-package' which will set the package.

	(slime-pretty-find-buffer-package): Removed. (Nowhere used.)
	(slime-set-package): Ditto.

2008-03-14  Helmut Eller  <heller@common-lisp.net>

	Remove some rarely used code.

	* slime.el (with-lexical-bindings): Removed.  Updated callers
	accordingly.